<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_intro_lock_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_intro_lock_pwd"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/details_intro_lock_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/tips_intro_lock_pwd"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/title_intro_lock_pwd" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_intro_lock_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/selector_et_underline"
        android:gravity="center"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:textColor="@android:color/white"
        android:textCursorDrawable="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/details_intro_lock_pwd" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_intro_hide_lock_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_hide_pwd_toggle"
        android:src="@drawable/selector_hide_pwd_white"
        app:layout_constraintBottom_toBottomOf="@id/input_intro_lock_pwd"
        app:layout_constraintLeft_toRightOf="@id/input_intro_lock_pwd"
        app:layout_constraintTop_toTopOf="@id/input_intro_lock_pwd" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/details_intro_enable_fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/tips_intro_check_box_use_fingerprint"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_intro_lock_pwd" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_intro_enable_fingerprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="@id/details_intro_enable_fingerprint"
        app:layout_constraintLeft_toRightOf="@id/details_intro_enable_fingerprint"
        app:layout_constraintTop_toTopOf="@id/details_intro_enable_fingerprint" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_intro_next_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_circle_btn"
        android:contentDescription="@string/description_intro_next_step"
        android:src="@drawable/ic_chevron_right_white_60dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_intro_previous_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_circle_btn"
        android:contentDescription="@string/description_intro_previous_step"
        android:src="@drawable/ic_chevron_left_white_60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>